# DhmClient

./: README.md  clean.py  command_list.py  pyproject.toml
3DPoliCompiler/: dhmHolo.py
dhmclient/: __init__.py  dhmclient.py  exposure.py  holoclient.py  hologram.py  motorscan.py  rawholo.py  zernike.py
test/: hologram.zdc  holotest.py  live_tilt.py  test_dhm.py  test_holo.py  test_zernike.py
